// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignment/> _onSubmit() should call \`fetchChats\` because the \`assignment_channels\` setting has changed and \`auto_assign_to_teams\` is enabled 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
        ],
        "auto_assign_to_teams": true,
        "unassign_on_reply": false,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> _onSubmit() should call \`fetchChats\` because the \`auto_assign_to_teams\` setting has changed 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": false,
        "unassign_on_reply": false,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> _onSubmit() should call \`submitSetting\` and call \`fetchChats\` because the account has no \`ticket-assignment\` setting 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": true,
        "unassign_on_reply": false,
      },
      "id": undefined,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> _onSubmit() should call \`submitSetting\` and not call \`fetchChats\` because nor the \`auto_assign_to_teams\` setting nor the \`assignment_channels\` setting has changed 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": true,
        "unassign_on_reply": false,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> _onSubmit() should not call \`fetchChats\` because the \`assignment_channels\` setting has changed but \`auto_assign_to_teams\` is disabled 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
        ],
        "auto_assign_to_teams": false,
        "unassign_on_reply": false,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> render() should render selected channels 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className="btn-loading"
        color="success"
        disabled={true}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Auto assign" checkbox checked because the setting "Auto assign" is enabled 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Auto assign" checkbox unchecked because the setting "Auto assign" is disabled 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Save changes" button loading and disabled because the setting are being saved 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className="btn-loading"
        color="success"
        disabled={true}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Unassign on replies" checkbox checked because the setting Unassign replies is enabled 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Unassign on replies" checkbox checked by default and the auto assign checkbox unchecked by default, because there is no account setting for assignment 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;

exports[`<TicketAssignment/> render() should render the "Unassign on replies" checkbox unchecked because the setting Unassign replies isdisabled 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Ticket assignment"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        className="mb-2"
        tag="div"
      >
        <Col
          md="5"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Auto-assign tickets
            </Label>
            <BooleanField
              label="Auto-assign tickets that are assigned to a team, to an available agent of this team, as soon as an agent of the team is available"
              name="auto_assign_to_teams"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Un-assign on reply
            </Label>
            <BooleanField
              label="When there is a new reply in a ticket of the following channels, if the user assigned to it is not available, un-assign the ticket"
              name="unassign_on_reply"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <div
            className="text-faded"
          >
            Users are considered as not available when any of those conditions is true:
            <ul>
              <li>
                the user turned off its "Available" setting
              </li>
              <li>
                the user has been inactive on Gorgias for more than
                 
                10
                 minutes
              </li>
              <li>
                the user is not on Gorgias on any device
              </li>
            </ul>
          </div>
          <div
            className="mb-2"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Channels
            </Label>
            <p>
              Apply ticket assignment settings to the following channels:
            </p>
            <MultiSelectOptionsField
              allowCustomOptions={false}
              caseInsensitive={true}
              matchInput={true}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "aircall",
                    "value": "aircall",
                  },
                  Object {
                    "label": "api",
                    "value": "api",
                  },
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "email",
                    "value": "email",
                  },
                  Object {
                    "label": "facebook",
                    "value": "facebook",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                  Object {
                    "label": "instagram-ad-comment",
                    "value": "instagram-ad-comment",
                  },
                  Object {
                    "label": "instagram-comment",
                    "value": "instagram-comment",
                  },
                  Object {
                    "label": "phone",
                    "value": "phone",
                  },
                  Object {
                    "label": "sms",
                    "value": "sms",
                  },
                  Object {
                    "label": "twitter",
                    "value": "twitter",
                  },
                ]
              }
              plural="channels"
              selectedOptions={
                Array [
                  Object {
                    "label": "chat",
                    "value": "chat",
                  },
                  Object {
                    "label": "facebook-messenger",
                    "value": "facebook-messenger",
                  },
                ]
              }
              singular="channel"
              tagColor="#0275d8"
            />
          </div>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </Container>
</div>
`;
